force-app/main/default/objects/Opportunity/fields/Aprova_Embalagem__c.field-meta.xml
<CustomField>
    <fullName>Aprova_Embalagem__c</fullName>
    <label>Aprovação Embalagem</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>