force-app/main/default/objects/Opportunity/fields/Aprova_Frete__c.field-meta.xml
<CustomField>
    <fullName>Aprova_Frete__c</fullName>
    <label>Aprovação Frete</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>