force-app/main/default/objects/Opportunity/fields/Aprova_Seguro__c.field-meta.xml
<CustomField>
    <fullName>Aprova_Seguro__c</fullName>
    <label>Aprovação Seguro</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>