force-app/main/default/objects/Opportunity/fields/AprovacaoFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>AprovacaoFinanceiro__c</fullName>
    <label>Aprovação Financeiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reajuste</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>