force-app/main/default/objects/Opportunity/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <label>Campanha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campanha Estribo VAVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>