force-app/main/default/objects/Opportunity/fields/CanalOportunidade__c.field-meta.xml
<CustomField>
    <fullName>CanalOportunidade__c</fullName>
    <formula>TEXT(Account.Canal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>