force-app/main/default/objects/Opportunity/fields/Classific_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Classific_Cliente__c</fullName>
    <formula>Account.Classifica_o_do_Cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classificação do Cliente</label>
    <type>Text</type>
</CustomField>