force-app/main/default/objects/Opportunity/fields/Cliente_relatou_algum_problema__c.field-meta.xml
<CustomField>
    <fullName>Cliente_relatou_algum_problema__c</fullName>
    <label>Cliente relatou algum problema?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>