force-app/main/default/objects/Opportunity/fields/CodCanalOportunidade__c.field-meta.xml
<CustomField>
    <fullName>CodCanalOportunidade__c</fullName>
    <formula>TEXT(Account.Cod_Canal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod Canal</label>
    <type>Text</type>
</CustomField>