force-app/main/default/objects/Opportunity/fields/CotacaoRelacionadaOportunidade__c.field-meta.xml
<CustomField>
    <fullName>CotacaoRelacionadaOportunidade__c</fullName>
    <description>Campo a ser utlizado no modelo de email para criar o link da cotação relacionada a Oportunidade.</description>
    <formula>SyncedQuoteId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cotação Relacionada</label>
    <type>Text</type>
</CustomField>