force-app/main/default/objects/Opportunity/fields/Data_Entrega_KEKO__c.field-meta.xml
<CustomField>
    <fullName>Data_Entrega_KEKO__c</fullName>
    <label>Data Entrega KEKO</label>
    <type>Date</type>
</CustomField>