force-app/main/default/objects/Opportunity/fields/EmailComercialOportunidade__c.field-meta.xml
<CustomField>
    <fullName>EmailComercialOportunidade__c</fullName>
    <label>Email Comercial</label>
    <type>Email</type>
</CustomField>