force-app/main/default/objects/Opportunity/fields/InformacoesAdicionais__c.field-meta.xml
<CustomField>
    <fullName>InformacoesAdicionais__c</fullName>
    <description>Campo para descrever mais sobre o motivo da perda.</description>
    <inlineHelpText>Caso o motivo da perda seja &quot;Outro&quot; é preciso descrever mais sobre o motivo.</inlineHelpText>
    <label>Informações adicionais</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>