force-app/main/default/objects/Opportunity/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>Montadora</fullName>
            </value>
            <value>
                <fullName>E-commerce B2B</fullName>
            </value>
            <value>
                <fullName>E-commerce B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>