force-app/main/default/objects/Opportunity/fields/Modalidade_de_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Modalidade_de_Embarque__c</fullName>
    <label>Modalidade de Embarque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rodoviário</fullName>
            </value>
            <value>
                <fullName>Aeroviário</fullName>
            </value>
            <value>
                <fullName>Marítimo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>