force-app/main/default/objects/Opportunity/fields/Motivo_Perda__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Perda__c</fullName>
    <inlineHelpText>Selecione o principal motivo da perda da oportunidade.</inlineHelpText>
    <label>Motivo Perda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agilidade de Atendimento</fullName>
            </value>
            <value>
                <fullName>Baixa demanda de mercado</fullName>
            </value>
            <value>
                <fullName>CNPJ restrito (problemas financeiros)</fullName>
            </value>
            <value>
                <fullName>Compra de oportunidade (uso próprio ou venda casada)</fullName>
            </value>
            <value>
                <fullName>Experiência negativa com a marca no passado</fullName>
            </value>
            <value>
                <fullName>Não atende volume mínimo</fullName>
            </value>
            <value>
                <fullName>Não quer trocar de marca (já trabalha com outra)</fullName>
            </value>
            <value>
                <fullName>Pouca flexibilidade nas condições de pagamento</fullName>
            </value>
            <value>
                <fullName>Prazo de Entrega</fullName>
            </value>
            <value>
                <fullName>Prazo de entrega não atende a necessidade do cliente</fullName>
            </value>
            <value>
                <fullName>Preço</fullName>
            </value>
            <value>
                <fullName>Preço Alto</fullName>
            </value>
            <value>
                <fullName>Qualidade do Produto</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
                <label>Outro. Qual?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>