force-app/main/default/objects/Opportunity/fields/pc_fechamento_cubagem__c.field-meta.xml
<CustomField>
    <fullName>pc_fechamento_cubagem__c</fullName>
    <label>% Fechamento da Cubagem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>