force-app/main/default/objects/Opportunity/fields/Programa_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Programa_Embarque__c</fullName>
    <label>Programação de Embarque</label>
    <type>Date</type>
</CustomField>