force-app/main/default/objects/Opportunity/fields/RunningFLow__c.field-meta.xml
<CustomField>
    <fullName>RunningFLow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo é atualizado dentro do flow Quote - After Save. Quando ele é marcado com o valor &quot;true&quot;, permite que o estágio seja modificado de &quot;Gerar Cotação&quot; para &quot;Aguardando aprovação Financeiro&quot;.</description>
    <label>Running FLow</label>
    <type>Checkbox</type>
</CustomField>