force-app/main/default/objects/Opportunity/fields/SegmentoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>SegmentoOportunidade__c</fullName>
    <formula>TEXT(Account.Segmento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>