force-app/main/default/objects/Opportunity/fields/ValorPretendidoPrimeiroPedido__c.field-meta.xml
<CustomField>
    <fullName>ValorPretendidoPrimeiroPedido__c</fullName>
    <description>Campo utilizado para registrar o valor estimado ou pretendido para o primeiro pedido do cliente. Essa informação auxilia na projeção de vendas e no planejamento estratégico das negociações.</description>
    <inlineHelpText>Escrever o valor do pedido que o cliente pretende colocar para abertura da conta.</inlineHelpText>
    <label>Valor pretendido do primeiro pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>