force-app/main/default/objects/Opportunity/recordTypes/CAMPANHA_DE_VENDAS.recordType-meta.xml
<RecordType>
    <fullName>CAMPANHA_DE_VENDAS</fullName>
    <active>true</active>
    <businessProcess>CAMPANHA DE VENDAS</businessProcess>
    <label>CAMPANHA DE VENDAS</label>
</RecordType>