force-app/main/default/objects/Opportunity/recordTypes/Export_Novos_Neg_cios.recordType-meta.xml
<RecordType>
    <fullName>Export_Novos_Neg_cios</fullName>
    <active>true</active>
    <businessProcess>Export %7C Novos Negócios</businessProcess>
    <label>Export | Novos Negócios</label>
</RecordType>