force-app/main/default/objects/Opportunity/recordTypes/Export_Vendas.recordType-meta.xml
<RecordType>
    <fullName>Export_Vendas</fullName>
    <active>true</active>
    <businessProcess>Export %7C Venda</businessProcess>
    <label>Export | Vendas</label>
</RecordType>