force-app/main/default/objects/Opportunity/recordTypes/Montadora_Novos_Neg_cios.recordType-meta.xml
<RecordType>
    <fullName>Montadora_Novos_Neg_cios</fullName>
    <active>true</active>
    <businessProcess>Montadoras %7C Novos Negócios</businessProcess>
    <label>Montadoras | Novos Negócios</label>
</RecordType>