force-app/main/default/objects/Opportunity/validationRules/InformacoesAdicionaisPerda.validationRule-meta.xml
<ValidationRule>
    <fullName>InformacoesAdicionaisPerda</fullName>
    <active>true</active>
    <description>Regra de validação que torna o preenchimento do campo &quot;Informações Adicionais&quot; quando o &quot;Motivo da Perda&quot; for outros.</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Motivo_Perda__c, &apos;Outros&apos;),
     ISBLANK(InformacoesAdicionais__c)
)</errorConditionFormula>
    <errorDisplayField>InformacoesAdicionais__c</errorDisplayField>
    <errorMessage>É preciso preencher o campo com mais detalhes da perda.</errorMessage>
</ValidationRule>