force-app/main/default/objects/Opportunity/validationRules/Motivo_da_perda.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_da_perda</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Motivo_Perda__c)) &amp;&amp; ISPICKVAL( StageName , &quot;Fechado Perdido&quot;)</errorConditionFormula>
    <errorMessage>O campo Motivo da perda exige um valor quando o estágio é Fechada perdida</errorMessage>
</ValidationRule>