force-app/main/default/objects/Opportunity/validationRules/Motivo_Perda_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_Perda_Closed_Lost</fullName>
    <active>true</active>
    <description>Motivo_Perda_Closed_Lost</description>
    <errorConditionFormula>ISBLANK(TEXT(Motivo_Perda__c)) &amp;&amp; ISPICKVAL( StageName , &quot;Closed Lost&quot;)</errorConditionFormula>
    <errorMessage>Necessário Informar motivo de perda na oportunidade.</errorMessage>
</ValidationRule>