force-app/main/default/objects/Opportunity/validationRules/Oportunidade_Encerramento.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidade_Encerramento</fullName>
    <active>true</active>
    <description>Esta regra de validação irá impedir que a Oportunidade seja marcada como ganha por usuários que não possuem o perfil de BackOffice.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Fechado Ganho&quot;),
$Profile.Name &lt;&gt; &quot;Backoffice&quot;
)</errorConditionFormula>
    <errorMessage>Você não tem permissão para fechar essa Oportunidade como ganha. Apenas o BackOffice tem esta permissão.</errorMessage>
</ValidationRule>