force-app/main/default/objects/Opportunity/validationRules/Oportunidade_RestricaoAlteracaoCotacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidade_RestricaoAlteracaoCotacao</fullName>
    <active>true</active>
    <description>Esta regra impede que o usuário altere o estágio &quot;Gerar Cotação&quot; para qualquer outro manualmente.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    NOT(
        OR(
            AND(
                TEXT(PRIORVALUE(StageName)) = &quot;Nova&quot;,
                TEXT(StageName) = &quot;Gerar cotação&quot;
            ),
            RunningFLow__c = true
        )
    )
)</errorConditionFormula>
    <errorMessage>Não é possível modificar o estágio manualmente.</errorMessage>
</ValidationRule>