force-app/main/default/objects/Opportunity/validationRules/Oportunidade_RestricaoAlteracaoEstagio.validationRule-meta.xml
<ValidationRule>
    <fullName>Oportunidade_RestricaoAlteracaoEstagio</fullName>
    <active>true</active>
    <description>Esta regra de validação impede que qualquer usuário, exceto o proprietário da Oportunidade, altere o estágio (StageName). Se outro usuário tentar modificar o estágio, o Salesforce exibirá uma mensagem de erro.</description>
    <errorConditionFormula>AND(
   ISCHANGED(StageName),
   NOT(
      OR(
         OwnerId = $User.Id,
         $Profile.Name = &quot;System Administrator&quot;,
         $Profile.Name = &quot;Cotação para Cliente Profile&quot; 
      )
   )
)</errorConditionFormula>
    <errorMessage>Não é possível modificar esta Oportunidade porque você não é o proprietário dela.</errorMessage>
</ValidationRule>