force-app/main/default/objects/Opportunity/validationRules/RestricaoDataFechamento.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoDataFechamento</fullName>
    <active>false</active>
    <description>Esta regra de validação impede que o usuário possa alterar a data de fechamento de uma oportunidade.</description>
    <errorConditionFormula>AND(
    ISCHANGED(CloseDate),
    OR (
        $Profile.Name = &quot;Vendedor Interno&quot;,
        $Profile.Name = &quot;Gestor Externo&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Não é possível alterar a data de fechamento de uma oportunidade.</errorMessage>
</ValidationRule>