force-app/main/default/objects/Opportunity/validationRules/Validar_Fase_AnaliseComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Fase_AnaliseComercial</fullName>
    <active>false</active>
    <description>Regra de validação garante que a ordem da esteira de oportunidade siga a sequência estabelecida.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(StageName), &apos;Análise Comercial&apos;),
    OR(
       ISPICKVAL(StageName, &apos;Proposta em Análise Cliente&apos;),
       ISPICKVAL(StageName, &apos;Análise Backoffice&apos;),
       ISPICKVAL(StageName, &apos;Fechado Ganho&apos;),
       ISPICKVAL(StageName, &apos;Em Produção&apos;),
       ISPICKVAL(StageName, &apos;Faturado Parcial&apos;),
       ISPICKVAL(StageName, &apos;Faturado&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Não é possível pular etapas na esteira de oportunidade. Siga a sequência correta.</errorMessage>
</ValidationRule>