force-app/main/default/objects/Opportunity/validationRules/Validar_Fase_Nova.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Fase_Nova</fullName>
    <active>true</active>
    <description>Regra de validação garante que a ordem da esteira de oportunidade siga a sequência estabelecida.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(StageName), &apos;Nova&apos;),
    OR(
       ISPICKVAl(StageName, &apos;Aguardando aprovação Financeiro&apos;),
       ISPICKVAL(StageName, &apos;Finalizar cotação&apos;),
       ISPICKVAL(StageName, &apos;Proposta em Análise Cliente&apos;),
       ISPICKVAL(StageName, &apos;Liberação Back office&apos;),
       ISPICKVAL(StageName, &apos;Fechado Ganho&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Não é possível pular etapas na esteira de oportunidade. Siga a sequência correta.</errorMessage>
</ValidationRule>