force-app/main/default/objects/Opportunity/validationRules/Validar_FaseFinalizarCadastro.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_FaseFinalizarCadastro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName), 
    ISPICKVAL(PRIORVALUE(StageName), &quot;Finalizar Cadastro&quot;),
    NOT(ISPICKVAL(StageName, &quot;Liberação Back Office&quot;))
)</errorConditionFormula>
    <errorMessage>Sua oportunidade está em Finalizar Cadastro. Só é permitido passá-la para Liberação Back Office.</errorMessage>
</ValidationRule>