force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campanha__c</field>
        <operation>equals</operation>
        <value>Campanha Estribo VAVE</value>
    </filters>
    <label>Funil de oportunidades</label>
</ListView>