force-app/main/default/objects/Opportunity/listViews/ESTE_M_S.listView-meta.xml
<ListView>
    <fullName>ESTE_M_S</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Criadas Este Mês</label>
</ListView>