force-app/main/default/objects/Opportunity/listViews/ltimos_30_dias.listView-meta.xml
<ListView>
    <fullName>ltimos_30_dias</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Criadas Últimos 30 dias</label>
</ListView>